<resources>
    <string name="app_name">MIEMO</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="memo_history">Memo History</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Log Out</string>
    <string name="dummy_long_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.</string>

    <string name="home_header">Hello %1$s!</string>
    <string name="greeting">How do you feel today?</string>
    <string name="empty_note">You Haven’t Written a Memo Today</string>
    <string name="write_memo">write a memo!</string>
    <string name="history_header">Memo History</string>
    <string name="tv_date">01/01/2024</string>
    <string name="submit">submit</string>
    <string name="email">Email</string>
    <string name="lannguage">Language</string>
    <string name="username">Username</string>
    <string name="profile">Profile</string>
    <string name="password">Password</string>
    <string name="tv_register_to_login_text">Already have an account? Login</string>
    <string name="tv_login_to_register_text">Don’t have an account? Register</string>

    <string name="ed_login_email_error">Invalid email address</string>
    <string name="ed_login_email_hint">Email</string>
    <string name="ed_login_password_error">Password must be at least 8 characters long</string>
    <string name="ed_login_password_hint">Password</string>
    <string name="ed_register_name_hint">Name</string>
    <string name="image_chooser_title">Choose a Picture</string>
    <string name="menu_logout_toast">Logged out successfully</string>
    <string name="toast_login_failed">Login failed: %1$s</string>
    <string name="toast_login_greetings">Welcome %1$s</string>
    <string name="toast_login_invalid_input">You have invalid input(s)</string>
    <string name="toast_main_load_failed">Failed to load data: %1$s</string>
    <string name="toast_register_failed">Register failed: %1$s</string>
    <string name="toast_register_invalid_input">You have invalid input(s)</string>
    <string name="toast_register_success">Thanks for joining us</string>

    <string name="logout_success">Log out success, redirect to login page</string>
    <string name="login_success">Login success</string>
    <string name="error_message">There\'s an error: %1$s</string>
    <string name="you_haven_t_written_a_memo_today">You Haven\'t Written a Memo Today</string>

</resources>